<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/card_nbu"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp">
        <TextView
            android:id="@+id/ccy_name_ru"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/ccy_name_nbu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
            android:id="@+id/uan_name_ru"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/uan"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/uan_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="italic"
            android:textSize="16sp"
            android:layout_margin="10dp"
            android:text="@string/uan_price"
            app:layout_constraintEnd_toStartOf="@id/uan_name_ru"/>
        <TextView
            android:id="@+id/ccy_name_en"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:text="@string/ccy_name_en"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/uan_name_ru"/>
        <TextView
            android:id="@+id/unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="italic"
            android:textSize="16sp"
            android:layout_margin="10dp"
            android:text="@string/unit"
            app:layout_constraintTop_toBottomOf="@id/uan_price"
            app:layout_constraintEnd_toStartOf="@id/uan_name_ru"/>


    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>