<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp">



            <TextView
                android:id="@+id/pb_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pb_name_text"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/dateButton"/>

            <ImageButton
                android:id="@+id/dateButton"
                android:layout_margin="4dp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/date"
                android:background="@drawable/ic_today"
                app:layout_constraintEnd_toStartOf="@id/currentDate" />
            <TextView
                android:id="@+id/currentDate"
                android:textColor="@color/dateTextColor"
                android:layout_margin="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                android:id="@+id/ccy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ccy"
                android:textSize="18sp"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toBottomOf="@id/pb_name"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/buy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/buy"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@id/sale"
                app:layout_constraintStart_toEndOf="@+id/ccy"
                app:layout_constraintTop_toBottomOf="@id/pb_name" />
            <TextView
                android:id="@+id/sale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sale"
                android:textSize="18sp"
                android:layout_margin="4dp"
                app:layout_constraintTop_toBottomOf="@id/pb_name"
                app:layout_constraintEnd_toEndOf="parent"/>

        </android.support.constraint.ConstraintLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_pb"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </LinearLayout>