<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wrong_message"
        android:textStyle="italic|bold"
        android:textSize="30sp"
        android:gravity="center"
        android:visibility="gone"/>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp">

        <TextView
            android:id="@+id/nbu_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nbu_name_text"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/nbu_dateButton"/>

        <ImageButton
            android:id="@+id/nbu_dateButton"
            android:layout_margin="4dp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/date"
            android:background="@drawable/ic_today"
            app:layout_constraintEnd_toStartOf="@id/nbu_currentDate" />

        <TextView android:id="@+id/nbu_currentDate"
            android:layout_margin="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dateTextColor"
            android:text="@string/date"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"/>

    </android.support.constraint.ConstraintLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_nbu"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>